# GBP-SERVER

./: CMakeLists.txt  main.cpp
Genetic/Objects/: Algorithm.cpp  Algorithm.h  Fitness.h  Gladiator.cpp  Gladiator.h  Population.cpp  Population.h
Genetic/Structures/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
Genetics/: Algorithm.cpp  Algorithm.h  Fitness.cpp  Fitness.h  Gladiator.cpp  Gladiator.h  Population.cpp  Population.h
Logic/: Cell.cpp  Cell.h  JSONManager.cpp  JSONManager.h  Matrix.cpp  Matrix.h
Main/: main.cpp
Objects/: Algorithm.cpp  Algorithm.h  Fitness.cpp  Fitness.h  Gladiator.cpp  Gladiator.h  Population.cpp  Population.h
Server/: Server.cpp  Server.h
Structures/: List.h  Node.h
Tests/: Matrix_Test.cpp  TestGenetic.cpp  test.cpp
